# rootfind

./: .travis.yml  Cargo.toml  README.md
src/: bracket.rs  convergence.rs  lib.rs  solver.rs  wrap.rs
src/solver/: driver.rs  mod.rs
tests/: integration.rs
