[package]
name = "rootfind"
description = "Root-finding algorithms"
version = "0.7.0"

keywords = ["root-finding", "roots", "newton", "bisection", "numerics"]
categories = ["algorithms", "science"]

authors = ["Niek Sanders <niek.sanders@gmail.com>"]
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/nieksand/rootfind/"

[dependencies]
